add about a text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
     <div class="main-content">
      {{>header}}
     <img class="portrait" src="img/robo.jpg" alt="robo img">
+    <p>This site is created by I. Abdukaimov. It uses data from mapbox.com and darksky.net</p>
     </div>
    
     {{>footer}}
